# ova-client

./: .gitignore  Justfile  Makefile  Readme.md  config.py  ova.py  ova_client.py  pyproject.toml  setup.cfg  validators.py  visualize.py
.github/workflows/: ci.yaml
requirements/: common.in  common.txt  dev.in  dev.txt
src/: visualize.py
tests/: test_detection.py
