#
# Ruff
#

[tool.ruff]
exclude = [
  ".eggs",
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  "__pycache__",
  ".tox",
  ".venv",
  "__pypackages__",
  "build",
  "dist",
  "node_modules",
  ".venv",
]

extend-select = ["I"]
line-length = 100
indent-width = 4
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

#
# Poetry
#

[tool.poetry]
name = "ova"
version = "0.1.0"
description = "Open Vision API Python Client"
authors = ["pythops <contact@pythops.com>"]
license = "AGPLv3"
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.1.0"
pygments = "^2.17.2"
click = "^8.1.7"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pdbpp = "*"

[tool.poetry.group.test.dependencies]
ruff = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-icdiff = "*"
pytest-coverage = "*"
mypy = "*"
responses = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#
# Pytest
#

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test* *Tests"
addopts = "-vv -x"
asyncio_mode = "auto"

#
# Mypy
#

[tool.mypy]
check_untyped_defs = true
namespace_packages = true
pretty = true
show_error_context = true
allow_redefinition = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["PIL.*"]
ignore_missing_imports = true
